--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -50,7 +50,7 @@ jobs:
         uses: ForAllSecure/mcode-action@v1
         with:
           mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
-          args: --image ${{ steps.meta.outputs.tags }} --file ${{ mayhem/Mayhemfile }} --duration 1200
+          args: --image ${{ steps.meta.outputs.tags }} --file mayhem/Mayhemfile --duration 1200
           sarif-output: sarif
 
       - name: Upload SARIF file(s)
