--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -46,7 +46,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Start analysis for sentreq
+      - name: Start analysis for pastel
         uses: ForAllSecure/mcode-action@v1
         with:
           mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
